respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/P2G_SCP_Patios__c.object
<CustomObject>
    <fields>
        <fullName>P2G_CI_AccountAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Buscar una direcion</description>
        <label>Account Address</label>
        <referenceTo>Account_Address__c</referenceTo>
        <relationshipLabel>Certificación Proveedor / Patios</relationshipLabel>
        <relationshipName>Certificacion_Proveedor_Patios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P2G_CI_CertificacionProveedor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Busca una certificacion</description>
        <label>Certificación de Proveedor</label>
        <referenceTo>Certificacion_de_Proveedor__c</referenceTo>
        <relationshipLabel>Certificación Proveedor / Patios</relationshipLabel>
        <relationshipName>Certificacion_Proveedor_Patios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P2G_CI_DireccionPatios__c</fullName>
        <formula>P2G_CI_AccountAddress__r.Calle_cat__c+&apos; &apos;+P2G_CI_AccountAddress__r.Numero_Ext_cp__c+&apos; &apos;+P2G_CI_AccountAddress__r.Numero_Int_cat__c+&apos;, &apos;+P2G_CI_AccountAddress__r.Codigo_Postal_CP__r.Name+&apos;, &apos;+SUBSTITUTE( P2G_CI_AccountAddress__r.Localidad_Cat2__c,LEFT( P2G_CI_AccountAddress__r.Localidad_Cat2__c, FIND(&quot; &quot;, P2G_CI_AccountAddress__r.Localidad_Cat2__c)), &quot;&quot;)+&apos;, &apos;+SUBSTITUTE( P2G_CI_AccountAddress__r.Estado_cat2__c,LEFT( P2G_CI_AccountAddress__r.Estado_cat2__c , FIND(&quot; &quot;, P2G_CI_AccountAddress__r.Estado_cat2__c)), &quot;&quot;)+&apos;, &apos;+P2G_CI_AccountAddress__r.Pais_cat1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirección de Patios</label>
        <type>Text</type>
    </fields>
    <label>Certificación Proveedor / Patio</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CFP/Patio-{YY}-{000000}</displayFormat>
        <label>CFP/Patio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificacion Proveedor / Patios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>